--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
   <meta name="author" content="Melissa Egan">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>MGMT</title>
-  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/normalize.min.css" />
   <!-- OPTIONAL IMPORTS -->
-  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/bulma.min.css" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway" />
   <!-- END OPTIONAL IMPORTS -->
-  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/index.css" />
+  <link rel="stylesheet" type="text/css" href="assets/stylesheets/bootstrap-iso.css"/>
+  <link rel="stylesheet" type="text/css" href="slick-master/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick-master/slick/slick-theme.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/stylesheets/lightbox.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/stylesheets/index.css" />
 </head>
 <body>
   <nav class="navbar" role="navigation" aria-label="main navigation">
@@ -42,7 +44,7 @@
       <source src="assets/images/video2.mp4" type="video/mp4">
     </video>
   </div>
-<script type="text/javascript" src="assets/javascripts/jquery.min.js"></script>
-<script src="assets/javascripts/functions.js"></script>
+  <script src="assets/javascripts/functions.js"></script>
+  <script type="text/javascript" src="assets/javascripts/jquery.min.js"></script>
 </body>
 </html>
