--- a/tour.html
+++ b/tour.html
@@ -6,22 +6,17 @@
   <meta name="author" content="Melissa Egan">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tour</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css" />
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css" /> -->
   <link rel="stylesheet" href="./assets/stylesheets/tour.css" />
 </head>
 <body>
-<!-- <div class="header"
-  <a class="image" href="index.html">
-    <img src="assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
-  </a>
-</div> -->
 <div class="parallax" id="letsScroll">
   <div class="parallax__group">
     <div class="parallax__layer parallax__layer--back">
       <img src="assets/images/oliver-space.jpg" alt="MGMT"/>
     </div>
     <div class="parallax__layer parallax__layer--foreground">
-      <!-- <nav class="navbar" role="navigation" aria-label="main navigation"> -->
+      <nav class="navbar" role="navigation" aria-label="main navigation">
             <a class="navbar-item" href="index.html">
               <img src="assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
             </a>
@@ -30,7 +25,7 @@
               <span aria-hidden="true"></span>
               <span aria-hidden="true"></span>
             </a>
-          <div id="navbar-menu">
+          <div id="navbar-menu" class="navbar-menu">
             <div class="navbar-start">
               <a class="navbar-item" href="about.html">ABOUT</a>
               <a class="navbar-item" href="music.html">MUSIC</a>
@@ -39,7 +34,8 @@
               <a class="navbar-item" href="tour.html">TOUR</a>
           </div>
         </div>
-      <!-- </nav> -->
+      </nav>
+    </div>
     <div class="parallax__layer parallax__layer--base">
       <div class="content">
         <table>
@@ -78,8 +74,7 @@
           </tbody>
         </table>
       </div>
-  <!-- </div> -->
-</div>
+  </div>
 <script type="text/javascript" src="assets/javascripts/jquery.min.js"></script>
 <script src="assets/javascripts/functions.js"></script>
 </body>
