--- a/product-details.html
+++ b/product-details.html
@@ -1,13 +1,64 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <title>Hello</title>
+  <meta charset="UTF-8" />
+  <meta name="description" content="Website for MGMT" />
+  <meta name="author" content="Melissa Egan">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Music</title>
+  <!-- OPTIONAL IMPORTS -->
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway" />
+  <!-- END OPTIONAL IMPORTS -->
+  <!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/bootstrap-iso.css"/> -->
+  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/product-details.css" />
 </head>
-<h1>Product Details</h1>
-<a href="index.html">Home</a><br />
-<a href="about.html">About</a><br />
-<a href="media.html">Media</a><br />
-<a href="shop.html">Shop</a><br />
-<a href="tour.html">Tour</a><br />
-<a href="music.html">Music</a><br />
+<body>
+  <style>
+    body {
+    background-image: url(assets/images/blue-holes.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+  }
+  </style>
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <a class="navbar-item" href="index.html">
+          <img src="assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
+        </a>
+        <a id="main-menu" role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </div>
+      <div id="navbar-menu" class="navbar-menu">
+        <div class="navbar-start">
+          <a class="navbar-item" href="about.html">ABOUT</a>
+          <a class="navbar-item" href="music.html">MUSIC</a>
+          <a class="navbar-item" href="shop.html">SHOP</a>
+          <a class="navbar-item" href="media.html">MEDIA</a>
+          <a class="navbar-item" href="tour.html">TOUR</a>
+      </div>
+    </div>
+  </nav>
+<div class="content">
+   <div class="first">
+      <img height="353px" width="325px" src="assets/images/white-sweater.jpg" alt="White Sweater" />
+    <div class="details">
+      <ul>
+          <h1>MGMT Psychedelic Hoodie</h1>
+          <p>Availability: In Stock<br />
+            <br />Details: MGMT Logo design printed on a white hoodie.<br /></p>
+            <br /><h1>$40.00</h1>
+            <p>Size:</p>
+          <img class="dropdown" src="assets/images/dropdown.png" alt="drop-down"  />
+          <button title="Add to Cart" class="button" oneclick=""><span>Add to Cart</span></button>
+      </ul>
+  </div>
+</div>
+  <script type="text/javascript" src="assets/javascripts/jquery.min.js"></script>
+  <script src="assets/javascripts/functions.js"></script>
+</body>
+</html>
