--- a/tour.html
+++ b/tour.html
@@ -10,72 +10,72 @@
   <link rel="stylesheet" href="./assets/stylesheets/tour.css" />
 </head>
 <body>
-<div class="parallax" id="letsScroll">
-  <div class="parallax__group">
-    <div class="parallax__layer parallax__layer--back">
-      <img src="assets/images/oliver-space.jpg" alt="MGMT"/>
-    </div>
-    <div class="parallax__layer parallax__layer--foreground">
+    <style>
+      body {
+      background-image: url(assets/images/oliver-space.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: fixed;
+      background-position: center;
+    }
+    </style>
       <nav class="navbar" role="navigation" aria-label="main navigation">
-            <a class="navbar-item" href="index.html">
-              <img src="assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
-            </a>
-            <a id="main-menu" role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
-              <span aria-hidden="true"></span>
-              <span aria-hidden="true"></span>
-              <span aria-hidden="true"></span>
-            </a>
-          <div id="navbar-menu" class="navbar-menu">
-            <div class="navbar-start">
-              <a class="navbar-item" href="about.html">ABOUT</a>
-              <a class="navbar-item" href="music.html">MUSIC</a>
-              <a class="navbar-item" href="shop.html">SHOP</a>
-              <a class="navbar-item" href="media.html">MEDIA</a>
-              <a class="navbar-item" href="tour.html">TOUR</a>
-          </div>
+          <a class="navbar-item" href="index.html">
+            <img src="assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
+          </a>
+          <a id="main-menu" role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+          </a>
         </div>
-      </nav>
-    </div>
-    <div class="parallax__layer parallax__layer--base">
-      <div class="content">
-        <table>
-          <thead>
-            <tr><th>DATE</th><th>CITY</th><th>VENUE</th><th>TICKETS</th></tr>
-          </thead>
-          <tbody>
-            <tr><td>May 08, 2018</td><td>Denver, CO</td><td>Fillmore Audtorium</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>May 12, 2018</td><td>Calgary, AB</td><td>Big Four Building</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>May 19, 2018</td><td>Edmonton, AB</td><td>Orpheum Theatre</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>May 22, 2018</td><td>Vancouver, BC</td><td>Shobox Sodo</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>June 02 2018</td><td>Queretaro, Mexico</td><td>Pulso GNP</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>June 17, 2018</td><td>Dover, DE</td><td>Firefly Music Festival</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>June 29, 2018</td><td>Ewijk, Netherlands</td><td>Down the Rabbit Hole</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>June 30, 2018</td><td>Luxembourg, Luxembourg</td><td>Sirens Call 2018</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>July 04, 2018</td><td>Paris, France<td>Days Off Festival</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>July 05, 2018</td><td>Brussels, Belgium</td><td>Rock Werchter 2018</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>July 06, 2018</td><td>Herouville-Saint-Clair, France</td><td>Festival Beauregard</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>July 07, 2018</td><td>Werchter, Belgium</td><td>Festivalpark Werchter</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>July 08, 2018</td><td>Werchter, Belgium</td><td>Festivalpark Werchter</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>July 09, 2018</td><td>London, Somerset House</td><td>Shobox Sodo</td><td>Sold Out</td></tr>
-            <tr><td>July 12, 2018</td><td>Madrid, Spain</td><td>Mad Cool Festival</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>July 14, 2018</td><td>Alges, Portugal</td><td>Nos Alive</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>July 17, 2018</td><td>Milano, Italy</td><td>Milano Summer Festival</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>July 18, 2018</td><td>Nyon, Switzerland</td><td>Paleo Festival Nyon</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>July 20, 2018</td><td>Byron Bay NSW, Australia</td><td>Splendour in the Grass</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>July 24, 2018</td><td>Melbourne, Australia</td><td>Festival Hall w/Franz Ferdinand</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>July 25, 2018</td><td>Sydney, Australia</td><td>Hordern Pavilion w/Franz Ferdinand</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>July 28, 2018</td><td>Yuzawa, Japan</td><td>Fuji Rock Festival</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>August 10, 2018</td><td>Waynesville, OH</td><td>Bellwether Music Festival</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>November 10, 2018</td><td>Santiago, Chile</td><td>Fauna Primavera</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>November 11, 2018</td><td>Buenos Aires, Argentina</td><td>Fuji Rock Festival</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>November 13, 2018</td><td>Porto Alegre, Brazil</td><td>Auditorio Araujo Vianna (Queremos!)</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>November 14, 2018</td><td>Rio De Janero, Brazil</td><td>Circo Voader (Queremos!)</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-            <tr><td>November 15, 2018</td><td>Sao Paulp, Brazil</td><td>Popload Festival</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
-          </tbody>
-        </table>
+        <div id="navbar-menu" class="navbar-menu">
+          <div class="navbar-start">
+            <a class="navbar-item" href="about.html">ABOUT</a>
+            <a class="navbar-item" href="music.html">MUSIC</a>
+            <a class="navbar-item" href="shop.html">SHOP</a>
+            <a class="navbar-item" href="media.html">MEDIA</a>
+            <a class="navbar-item" href="tour.html">TOUR</a>
+        </div>
       </div>
+    </nav>
+  <div class="content">
+    <table>
+      <thead>
+        <tr><th>DATE</th><th>CITY</th><th>VENUE</th><th>TICKETS</th></tr>
+      </thead>
+      <tbody>
+        <tr><td>May 08, 2018</td><td>Denver, CO</td><td>Fillmore Audtorium</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>May 12, 2018</td><td>Calgary, AB</td><td>Big Four Building</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>May 19, 2018</td><td>Edmonton, AB</td><td>Orpheum Theatre</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>May 22, 2018</td><td>Vancouver, BC</td><td>Shobox Sodo</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>June 02 2018</td><td>Queretaro, Mexico</td><td>Pulso GNP</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>June 17, 2018</td><td>Dover, DE</td><td>Firefly Music Festival</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>June 29, 2018</td><td>Ewijk, Netherlands</td><td>Down the Rabbit Hole</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>June 30, 2018</td><td>Luxembourg, Luxembourg</td><td>Sirens Call 2018</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>July 04, 2018</td><td>Paris, France<td>Days Off Festival</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>July 05, 2018</td><td>Brussels, Belgium</td><td>Rock Werchter 2018</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>July 06, 2018</td><td>Herouville-Saint-Clair, France</td><td>Festival Beauregard</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>July 07, 2018</td><td>Werchter, Belgium</td><td>Festivalpark Werchter</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>July 08, 2018</td><td>Werchter, Belgium</td><td>Festivalpark Werchter</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>July 09, 2018</td><td>London, Somerset House</td><td>Shobox Sodo</td><td>Sold Out</td></tr>
+        <tr><td>July 12, 2018</td><td>Madrid, Spain</td><td>Mad Cool Festival</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>July 14, 2018</td><td>Alges, Portugal</td><td>Nos Alive</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>July 17, 2018</td><td>Milano, Italy</td><td>Milano Summer Festival</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>July 18, 2018</td><td>Nyon, Switzerland</td><td>Paleo Festival Nyon</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>July 20, 2018</td><td>Byron Bay NSW, Australia</td><td>Splendour in the Grass</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>July 24, 2018</td><td>Melbourne, Australia</td><td>Festival Hall w/Franz Ferdinand</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>July 25, 2018</td><td>Sydney, Australia</td><td>Hordern Pavilion w/Franz Ferdinand</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>July 28, 2018</td><td>Yuzawa, Japan</td><td>Fuji Rock Festival</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>August 10, 2018</td><td>Waynesville, OH</td><td>Bellwether Music Festival</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>November 10, 2018</td><td>Santiago, Chile</td><td>Fauna Primavera</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>November 11, 2018</td><td>Buenos Aires, Argentina</td><td>Fuji Rock Festival</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>November 13, 2018</td><td>Porto Alegre, Brazil</td><td>Auditorio Araujo Vianna (Queremos!)</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>November 14, 2018</td><td>Rio De Janero, Brazil</td><td>Circo Voader (Queremos!)</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+        <tr><td>November 15, 2018</td><td>Sao Paulp, Brazil</td><td>Popload Festival</td><td><a class="tickets" href="https://www.bandsintown.com/e/21347582?came_from=267&app_id=MGMT">Buy Tickets</td></tr>
+      </tbody>
+    </table>
   </div>
 <script type="text/javascript" src="assets/javascripts/jquery.min.js"></script>
 <script src="assets/javascripts/functions.js"></script>
 </body>
-</html>
