pushing updated links and tour venue links

--- a/media.html
+++ b/media.html
@@ -56,93 +56,114 @@
         <div class="picture"><button onClick="getSrc('https://www.youtube.com/embed/B9dSYgd5Elk')"><img src="assets/images/timetopretendvidcover.jpg" width="258" height="145" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></button></div>
         <div class="picture"><button onClick="getSrc('https://www.youtube.com/embed/QvSMp7T2Kes')"><img src="assets/images/flashdeleriumvidcover.jpg" width="258" height="145" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></button></div>
       </div>
-  <hr />
+
   <div class="row">
-    <div class="col">
       <div class="column has-text-centered">
         <a
-          href="assets/images/grammy-awards.jpg"
+          href="/MGMT/assets/images/grammy-awards.jpg"
           data-lightbox="demo-lightbox"
           data-title="Ben and Andrew">
-          <img src="assets/images/grammy-awards.jpg" />
+          <img src="/MGMT/assets/images/grammy-awards.jpg" />
         </a>
       </div>
       <div class="column has-text-centered">
         <a
-          href="assets/images/piggy-back.jpg"
+          href="/MGMT/assets/images/piggy-back.jpg"
           data-lightbox="demo-lightbox"
           data-title="Chilling">
-          <img src="assets/images/piggy-back.jpg" />
+          <img src="/MGMT/assets/images/piggy-back.jpg" />
         </a>
       </div>
       <div class="column has-text-centered">
         <a
-          href="assets/images/ben-portrait.jpg"
+          href="/MGMT/assets/images/ben-portrait.jpg"
           data-lightbox="demo-lightbox"
           data-title="Ben Playing">
-          <img src="assets/images/ben-portrait.jpg" />
-        </a>
-      </div>
-    </div>
-    <div class="col">
-      <div class="column has-text-centered">
-        <a
-          href="assets/images/against-a-wall.jpg"
-          data-lightbox="demo-lightbox"
-          data-title="Friends">
-          <img src="assets/images/against-a-wall.jpg" />
+          <img src="/MGMT/assets/images/ben-portrait.jpg" />
         </a>
       </div>
       <div class="column has-text-centered">
         <a
-          href="assets/images/in-woods.jpg"
-          data-lightbox="demo-lightbox"
-          data-title="Ben">
-          <img src="assets/images/in-woods.jpg" />
-        </a>
-      </div>
-      <div class="column has-text-centered">
-        <a
-          href="assets/images/ben-and-andrew.png"
+          href="/MGMT/assets/images/mgmt-concert-barcelona.jpg"
           data-lightbox="demo-lightbox"
           data-title="Smoking">
-          <img src="assets/images/ben-and-andrew.png" />
+          <img src="/MGMT/assets/images/mgmt-concert-barcelona.jpg" />
         </a>
       </div>
-    </div>
-    <!-- <div class="column has-text-centered">
-      <a
-        href="assets/images/black&white.jpg"
-        data-lightbox="demo-lightbox"
-        data-title="Poloroid">
-        <img src="assets/images/black&white.jpg" />
-      </a>
-    </div> -->
+      <div class="column has-text-centered">
+        <a
+          href="/MGMT/assets/images/against-a-wall.jpg"
+          data-lightbox="demo-lightbox"
+          data-title="Friends">
+          <img src="/MGMT/assets/images/against-a-wall.jpg" />
+        </a>
+      </div>
 
-    <!-- <div class="column has-text-centered">
+      <div class="column has-text-centered">
+        <a
+          href="/MGMT/assets/images/in-woods.jpg"
+          data-lightbox="demo-lightbox"
+          data-title="Ben">
+          <img src="/MGMT/assets/images/in-woods.jpg" />
+        </a>
+      </div>
+      <div class="column has-text-centered">
+        <a
+          href="/MGMT/assets/images/ben-and-andrew.png"
+          data-lightbox="demo-lightbox"
+          data-title="Smoking">
+          <img src="/MGMT/assets/images/ben-and-andrew.png" />
+        </a>
+      </div>
+
+    <div class="column has-text-centered">
       <a
-        href="assets/images/grammy-awards.jpg"
+        href="/MGMT/assets/images/2018-mgmt.jpg"
         data-lightbox="demo-lightbox"
-        data-title="Grammy Awards">
-        <img src="assets/images/grammy-awards.jpg" />
+        data-title="Smoking">
+        <img src="/MGMT/assets/images/2018-mgmt.jpg" />
       </a>
     </div>
     <div class="column has-text-centered">
       <a
-        href="assets/images/2018-mgmt.jpg"
+        href="/MGMT/assets/images/smoking2.jpg"
         data-lightbox="demo-lightbox"
-        data-title="Laughing">
-        <img src="assets/images/2018-mgmt.jpg" />
+        data-title="Smoking">
+        <img src="/MGMT/assets/images/smoking2.jpg" />
       </a>
     </div>
     <div class="column has-text-centered">
       <a
-        href="assets/images/piggy-back.jpg"
+        href="/MGMT/assets/images/eyes-closed.jpg"
         data-lightbox="demo-lightbox"
-        data-title="On the Beach">
-        <img src="assets/images/piggy-back.jpg" />
+        data-title="Smoking">
+        <img src="/MGMT/assets/images/eyes-closed.jpg" />
       </a>
-    </div> -->
+    </div>
+    <div class="column has-text-centered">
+      <a
+        href="/MGMT/assets/images/black&white.jpg"
+        data-lightbox="demo-lightbox"
+        data-title="Smoking">
+        <img src="/MGMT/assets/images/black&white.jpg" />
+      </a>
+    </div>
+    <div class="column has-text-centered">
+      <a
+        href="/MGMT/assets/images/tie-dye.jpg"
+        data-lightbox="demo-lightbox"
+        data-title="Smoking">
+        <img src="/MGMT/assets/images/tie-dye.jpg" />
+      </a>
+    </div>
+    <div class="column has-text-centered">
+      <a
+        href="/MGMT/assets/images/ben-hat.jpg"
+        data-lightbox="demo-lightbox"
+        data-title="Smoking">
+        <img src="/MGMT/assets/images/ben-hat.jpg" />
+      </a>
+    </div>
   </div>
 </div>
   <script src="assets/javascripts/functions.js"></script>
