--- a/product-details.html
+++ b/product-details.html
@@ -25,7 +25,7 @@
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="index.html">
-          <img src="assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
+          <img src="/MGMT/assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
         </a>
         <a id="main-menu" role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
           <span aria-hidden="true"></span>
@@ -53,7 +53,7 @@
             <br />Details: MGMT Logo design printed on a white hoodie.<br /></p>
             <br /><h1>$40.00</h1>
             <p>Size:</p>
-          <img class="dropdown" src="assets/images/dropdown.png" alt="drop-down"  />
+          <img class="dropdown" src="/MGMT/assets/images/dropdown.png" alt="drop-down"  />
           <button title="Add to Cart" class="button" oneclick=""><span>Add to Cart</span></button>
       </ul>
   </div>
