--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <!-- OPTIONAL IMPORTS -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway" />
   <!-- END OPTIONAL IMPORTS -->
-  <link rel="stylesheet" type="text/css" href="assets/stylesheets/bootstrap-iso.css"/>
+  <!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/bootstrap-iso.css"/> -->
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/about.css" />
 </head>
 <body>
@@ -26,7 +26,7 @@
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a class="navbar-item" href="index.html">
-        <img src="assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
+        <img src="/MGMT/assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
       </a>
       <a id="main-menu" role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
         <span aria-hidden="true"></span>
@@ -46,7 +46,7 @@
   </nav>
     <div class="content">
       <div class="top">
-        <img src="/MGMT/assets/images/purple-bckgd.jpg" alt="Band Members" class="img" />
+        <img src="assets/images/purple-bckgd.jpg" alt="Band Members" class="img" />
         <div class="text">
           <p>Ben Goldwasser and Andrew VanWyngarden formed the band while attending Wesleyan University during their freshman year. "We weren't trying to start a band,"
            remarked Goldwasser. "We were just hanging out and showing each other music that we liked." They experimented with noise rock and electronica before settling
