--- a/media.html
+++ b/media.html
@@ -28,7 +28,7 @@
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a class="navbar-item" href="index.html">
-        <img src="assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
+        <img src="/MGMT/assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
       </a>
       <a id="main-menu" role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
         <span aria-hidden="true"></span>
@@ -68,6 +68,30 @@
       </div>
       <div class="column has-text-centered">
         <a
+          href="/MGMT/assets/images/against-a-wall.jpg"
+          data-lightbox="demo-lightbox"
+          data-title="Friends">
+          <img src="/MGMT/assets/images/against-a-wall.jpg" />
+        </a>
+      </div>
+      <div class="column has-text-centered">
+        <a
+          href="/MGMT/assets/images/in-woods.jpg"
+          data-lightbox="demo-lightbox"
+          data-title="Ben">
+          <img src="/MGMT/assets/images/in-woods.jpg" />
+        </a>
+      </div>
+      <div class="column has-text-centered">
+        <a
+          href="/MGMT/assets/images/ben-and-andrew.png"
+          data-lightbox="demo-lightbox"
+          data-title="Smoking">
+          <img src="/MGMT/assets/images/ben-and-andrew.png" />
+        </a>
+      </div>
+      <div class="column has-text-centered">
+        <a
           href="/MGMT/assets/images/piggy-back.jpg"
           data-lightbox="demo-lightbox"
           data-title="Chilling">
@@ -92,30 +116,20 @@
       </div>
       <div class="column has-text-centered">
         <a
-          href="/MGMT/assets/images/against-a-wall.jpg"
-          data-lightbox="demo-lightbox"
-          data-title="Friends">
-          <img src="/MGMT/assets/images/against-a-wall.jpg" />
-        </a>
-      </div>
-
-      <div class="column has-text-centered">
-        <a
-          href="/MGMT/assets/images/in-woods.jpg"
-          data-lightbox="demo-lightbox"
-          data-title="Ben">
-          <img src="/MGMT/assets/images/in-woods.jpg" />
-        </a>
-      </div>
-      <div class="column has-text-centered">
-        <a
-          href="/MGMT/assets/images/ben-and-andrew.png"
+          href="/MGMT/assets/images/black&white.jpg"
           data-lightbox="demo-lightbox"
           data-title="Smoking">
-          <img src="/MGMT/assets/images/ben-and-andrew.png" />
+          <img src="/MGMT/assets/images/black&white.jpg" />
         </a>
       </div>
-
+      <div class="column has-text-centered">
+        <a
+          href="/MGMT/assets/images/smoking2.jpg"
+          data-lightbox="demo-lightbox"
+          data-title="Smoking">
+          <img src="/MGMT/assets/images/smoking2.jpg" />
+        </a>
+      </div>
     <div class="column has-text-centered">
       <a
         href="/MGMT/assets/images/2018-mgmt.jpg"
