--- a/product-details.html
+++ b/product-details.html
@@ -45,7 +45,7 @@
   </nav>
 <div class="content">
    <div class="first">
-      <img height="353px" width="325px" src="assets/images/white-sweater.jpg" alt="White Sweater" />
+      <img height="353px" width="325px" src="/MGMT/assets/images/white-sweater.jpg" alt="White Sweater" />
     <div class="details">
       <ul>
           <h1>MGMT Psychedelic Hoodie</h1>
@@ -57,6 +57,7 @@
           <button title="Add to Cart" class="button" oneclick=""><span>Add to Cart</span></button>
       </ul>
   </div>
+</div>
 </div>
   <script type="text/javascript" src="assets/javascripts/jquery.min.js"></script>
   <script src="assets/javascripts/functions.js"></script>
